Wed Jan 22 21:12:31 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkmet.c (GTKWriteMET): [!USE_GTKEXTRA]: declare pw.

Wed Jan 22 13:13:22 2003  Gary Wong  <gtw@gnu.org>

	* backgammon.h, dice.c, eval.c, gnubg.c, gtkcube.c, gtkexport.c,
	gtkgame.c, gtkmet.c, gtkprefs.c, gtkrace.c, gtksplash.c, gtktheory.c,
	html.c, i18n.h, makebearoff.c, matchequity.c, set.c, sgf.y,
	show.c, sound.c, text.c: Minor nit-picking changes (mainly making
	functions static unless they need to be extern).

Wed Jan 22 11:07:38 2003  Gary Wong  <gtw@gnu.org>

	* gtksplash.c (CreateSplash): [!GTK_CHECK_VERSION(2,2,0)] Don't
	use GDK_WINDOW_TYPE_HINT_SPLASHSCREEN (reported by Holger Bochnig).
	* gtkgame.c: [!GTK_CHECK_VERSION(2,2,0)] Don't use 
	GDK_WINDOW_TYPE_HINT_UTILITY.

	* gtkgame.c (OptionsPages): [!USE_SOUND] Don't use fSound
	(reported by Holger Bochnig).

Tue Jan 21 16:52:35 2003  Gary Wong  <gtw@gnu.org>

	* set.c (CommandSetGUIWindowPositions): New function.  Make restoring
	window positions optional, for use with window/session managers that 
	can do the job.

	* gtkgame.c: Don't use the deprecated gtk_window_set_wmclass(); call
	gtk_window_set_role() instead (under GTK+ 2.0).

	* gtksplash.c (CreateSplash): Use GDK_WINDOW_TYPE_HINT_SPLASHSCREEN
	under GTK+ 2.0, and add a couple of borders in case the window
	manager decides not to decorate us.

Tue Jan 21 14:49:29 2003  Gary Wong  <gtw@gnu.org>

	* eval.c (EvalKey): Bug fixes for cubeful equity caching: always
	perform cubeful key consideration for cube decisions (even if
	the evalcontext says it's cubeless), and don't take the one's
	complement for cubeful equities, since that gives -1 in trivial
	cases (which apparently means something special to lib/hash.c).

	* eval.c (EvaluatePositionCache, EvaluatePositionCubeful3): Don't
	try a cache lookup if the cache size is 0.

Sun Jan 19 10:20:32 2003  Gary Wong  <gtw@gnu.org>

	* renderprefs.c: #define M_PI, if necessary (reported by Nardy
	Pillards).
